--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
     },
     "require-dev": {
         "codeclimate/php-test-reporter": "dev-master",
-        "codacy/coverage": "dev-master"
+        "codacy/coverage": "dev-master",
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
