--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,4 @@ php:
     - 7.3
     - 7.4
     - 8.0
-script: make test
-after_script:
-  - vendor/bin/test-reporter
-  - vendor/bin/codacycoverage clover
+script: ./vendor/bin/phpunit
